# symmetria

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: all_other_issues.yml  bug_report.md  bug_report.yml  documentation_issue.md  documentation_issue.yml  enhancement_report.md  enhancement_report.yml  feature_request.md  feature_request.yml  maintenance_issue.md  maintenance_issue.yml  question.md  question.yml  report_all_other_issues_or_questions.md
.github/workflows/: check-pr-title.yml  code-style.yml  release.yml  tests.yml
benchmark/: __main__.py  core.py
docs/: .readthedocs.yaml  Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/elements/: cycle.rst  cycle_decomposition.rst  index.rst
docs/source/pages/: changelog.md  license.rst  quickstart.rst
docs/source/pages/API/: index.rst
docs/source/pages/API/elements/: index.rst  permutation.rst
docs/source/pages/API_reference/elements/: cycle.rst  cycle_decomposition.rst  index.rst  permutation.rst
docs/source/pages/API_reference/generators/: deterministic.rst  generate.rst  index.rst  permutation_generator.rst  random.rst
docs/source/pages/API_reference/groups/: index.rst
docs/source/pages/cli/: command_line_interface.rst
docs/source/pages/community/: license.rst
docs/source/pages/getting_started/: installation.rst  quickstart.rst
scripts/: run_tests.sh
symmetria/: __init__.py  __main__.py  _interfaces.py  elements.py  interfaces.py
symmetria/cli/: _commands.py  cli.py
symmetria/elements/: _base.py  _interface.py  _types.py  _utils.py  _validators.py  cycle.py  cycle_decomposition.py  cycles.py  permutation.py  permutations.py
symmetria/generators/: _algorithms.py  _validators.py  api.py
symmetria/generators/algorithm/: _algorithms.py  api.py
symmetria/generators/random/: _algorithms.py  api.py
tests/: test_factory.py  test_utils.py  tests_factory.py  utils.py
tests/test_cycle/: test_cases.py  test_magic_methods.py
tests/test_cycle_decomposition/: test_cases.py  test_magic_methods.py
tests/tests_cli/: test_cases.py  test_cli.py
tests/tests_cycle/: test_cases.py  test_constructors.py  test_generic_method.py  test_magic_methods.py
tests/tests_cycle_decomposition/: test_cases.py  test_constructors.py  test_generic_methods.py  test_magic_methods.py
tests/tests_elements/: test_base.py
tests/tests_elements/tests_cycle/: test_cases.py  test_constructors.py  test_generic_method.py  test_magic_methods.py
tests/tests_elements/tests_cycle_decomposition/: test_cases.py  test_constructors.py  test_generic_methods.py  test_magic_methods.py
tests/tests_elements/tests_permutation/: test_cases.py  test_constructors.py  test_generic_methods.py  test_magic_methods.py
tests/tests_generators/: test_api.py  test_cases.py
tests/tests_meta/: test_order.py
tests/tests_permutation/: test_cases.py  test_constructors.py  test_generic_methods.py  test_magic_methods.py
